fix printign colors

--- a/index.html
+++ b/index.html
@@ -1,60 +1,60 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="/css/style.css">
-  <title>Wochenplan</title>
-</head>
-<body>
-  <main class="main">
-    <table class="table">
-      <tr>
-        <th></th>
-        <th>Montag</th>
-        <th>Dienstag</th>
-        <th>Mitwoch</th>
-        <th>Donerstag</th>
-        <th>Freitag</th>
-      </tr>
-      <tr>
-        <th class="time">08:00 - 09:00</th>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-      </tr>
-      <tr>
-        <th class="time">09:10 - 10:00</th>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-      </tr>
-      <tr>
-        <th class="time">10:30 - 11:00</th>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-      </tr>
-      <tr>
-        <th class="time">11:10 - 11:45</th>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-        <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
-      </tr>
-    </table>
-  </main>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Wochenplan</title>
+  </head>
+  <body>
+    <main class="main">
+      <table class="table">
+        <tr>
+          <th></th>
+          <th>Montag</th>
+          <th>Dienstag</th>
+          <th>Mitwoch</th>
+          <th>Donerstag</th>
+          <th>Freitag</th>
+        </tr>
+        <tr>
+          <th class="time">08:00 - 09:00</th>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+        </tr>
+        <tr>
+          <th class="time">09:10 - 10:00</th>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+        </tr>
+        <tr>
+          <th class="time">10:30 - 11:00</th>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+        </tr>
+        <tr>
+          <th class="time">11:10 - 11:45</th>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+          <td><textarea name="text" rows="14" cols="14" wrap="soft" class="input_box"></textarea></td>
+        </tr>
+      </table>
+    </main>
 
-  <form>
-    <input type=button name=print value="Print" onClick="window.print()">
-</form>
-</body>
+      <input type=button name=print value="Print" id="go">
+  </body>
+
+  <script src="/js/script.js"></script>
 </html>
