last changes bevore it goes online

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Wochenplan</title>
   </head>
   <body>
@@ -52,8 +55,7 @@
         </tr>
       </table>
     </main>
-
-      <input type=button name=print value="Print" id="go">
+    <input type=button name=print value="Print" onclick="window.print();" class="Pirnt-btn">
   </body>
 
   <script src="/js/script.js"></script>
